fix error enum table usercommand and update orm and api

--- a/Trunk/www/api/schema/plashboard-hardwareConfiguration.json
+++ b/Trunk/www/api/schema/plashboard-hardwareConfiguration.json
@@ -9,7 +9,7 @@
 			"description": "Hardware ID",
 			"required": true,
 		},
-		"hardwareName": {
+		"name": {
 			"type": "string",
 			"description": "Hardware name to display",
 			"required": true,
