--- a/Trunk/www/userconfigurations/.htaccess
+++ b/Trunk/www/userconfigurations/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule .* userconfigurations.php/$0 [L]
+RewriteRule .* state-machine.php/$0 [L]
